<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/pngfuel_com"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/coffee"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_accommodation"
            android:icon="@drawable/pngfuel_com__1_"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/car1"
            android:title="@string/menu_transport" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/usefull"
            android:title="@string/menu_info_for_useful_places" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news2"
            android:title="@string/menu_news" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
