<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFD5BB">

    <LinearLayout
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="20sp"
            android:text="@string/Contact"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="40dp"
            android:text="@string/Subject"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:paddingTop="20dp"
            android:inputType="textMultiLine|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30dp"
            android:text="@string/mailText"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/mailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:paddingTop="20dp"
            android:inputType="textMultiLine|textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:text="@string/contInfo"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/contInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:paddingTop="20dp"
            android:inputType="textMultiLine|textCapSentences"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/send" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/mail"
            android:textSize="13sp"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>

