<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFD5BB">

    <LinearLayout
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="20sp"
            android:text="@string/title"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:justificationMode="inter_word"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:drawableBottom="@drawable/rhodes_gate"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:clickable="true"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/wiki"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>